--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -17,8 +17,8 @@
   </div>
 
   <div class="main-cards">
-    <app-categories class="card" [budgetType]="budgetType.Income"></app-categories>
-    <app-categories class="card" [budgetType]="budgetType.Expense"></app-categories>
+    <app-categories class="card" [budgetType]="budgetType.INCOME"></app-categories>
+    <app-categories class="card" [budgetType]="budgetType.EXPENSE"></app-categories>
     <app-activity-log class="card"></app-activity-log>
   </div>
 }
