--- a/src/app/shared/design-system/components/button/button.component.html
+++ b/src/app/shared/design-system/components/button/button.component.html
@@ -1,4 +1,4 @@
-<button
+<div
   customTooltip
   class="w-full flex items-center gap-x-1.5"
   [class.justify-center]="align === 'center'"
@@ -9,7 +9,6 @@
   [tooltipText]="text"
   [showTooltipOnlyOnOverflow]="true"
   [childElementId]="'buttonText'"
-  [type]="'button'"
 >
   @if (loading) {
     <app-loader [colorMode]="'inherit'"></app-loader>
@@ -23,4 +22,4 @@
       </span>
     }
   }
-</button>
+</div>
